    built when the user's config doesn't ask for them anyway.

  - The Module::Metadata package was split out from this distro back
    in 2010.  Removed its regression tests

  - Removed dependence on IO::File, replacing it with safe invocations
    of open(). [Sven Dowideit]

  - Added an 'extra_manify_args' parameter to facilitate man pages
    containing Unicode. [Joenio Costa]

0.4005 - Thu Apr 25 15:10:14 CEST 2013

  [ENHANCEMENTS]

  - Added --pureperl-only support

  [BUG FIXES]

  - #72176: pod2html will fail with an empty podpath in some cases. [Phillip Moore]

  - Fix links between modules in HTML docs output [Michael Wild, Leon Timmermans]

0.4004 - Fri Mar 29 15:05:00 CET 2013

  [BUG FIXES]

  - Minor VMS fix for @INC [Craig Berry]

  [ENHANCEMENTS]

  - test_requires support has been added [Matsuno Tokuhiro]

0.4003 - Sat Aug 18 11:17:49 CEST 2012

  [BUG FIXES]

  - Get rid of outdated metadata tests [Steve Hay]

0.4002 - Fri Jul 27 20:04:09 EEST 2012

  [BUG FIXES]

  - Test for TAP::Harness version properly [Leon Timmermans]

  - Install to 'site' on 5.12+ [Leon Timmermans]

  [DOCUMENTATION]

  - Document extra_{compiler|linker}_flags accessors [Nick Wellnhofer]

0.4001 - Tue Jun 26 20:54:15 CEST 2012
  [BUG FIXES]

  - Parse Pod name a litte more leniently [Paul Evans]

  [DOCUMENTATION]

  - Various spelling fixes [Leon Timmermans, Jonathan Yu]

  - Fixes configuration keys used for script location [Leon Timmermans, reported by Samuel Ferencik]

  [OTHER]

  - use warnings

0.40 - Fri Feb 24 18:47:48 CET 2012

  - Released 0.39_02 as 0.40 without any code changes

0.39_02 - Thu Feb 17 00:33:18 MET 2012

  [BUG FIXES]

  - Fixed bug where modules without $VERSION might have a version of '0'
    listed in 'provides' metadata, which will be rejected by PAUSE
    [David Golden, reported by Christopher Fields]

  - Fixed bug in PodParser to allow numerals in module names
    [Tokuhirom]
